--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "formik": "^2.1.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
